Uni search by country name

--- a/country_search/index.html
+++ b/country_search/index.html
@@ -154,35 +154,19 @@
             </button>
           </div>
           <div class="row text-start">
-            <div class="card mt-5" style="width: 50%">
+            <div class="card mt-5" style="width: 40%">
               <ul
                 class="list-group list-group-light list-group-small"
                 id="countryList"
               ></ul>
             </div>
 
-            <div class="card mt-5" style="width: 50%">
+            <div class="card mt-5" style="width: 60%">
               <h4 class="m-2"><strong>Favourite List</strong></h4>
-              <ul class="list-group list-group-light list-group-small">
-                <li class="list-group-item px-3">
-                  Cras justo odio
-                  <br />
-                  <br />
-                  <div>
-                    <button type="button" class="btn btn-primary">
-                      Primary
-                    </button>
-                    <button type="button" class="btn btn-success">
-                      Success
-                    </button>
-                    <button type="button" class="btn btn-danger">Danger</button>
-                    <button type="button" class="btn btn-warning">
-                      Warning
-                    </button>
-                    <button type="button" class="btn btn-info">Info</button>
-                  </div>
-                </li>
-              </ul>
+              <ul
+                class="list-group list-group-light list-group-small"
+                id="fvrtList"
+              ></ul>
             </div>
           </div>
         </section>
